<resources>
    <string name="app_name">Moove</string>

    <!--    String bagian Signup dan Login-->
    <string name="started">Let\'s get started</string>
    <string name="create">Create an account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="signup">SIGN UP</string>
    <string name="welcomeback">Welcome back!</string>
    <string name="pakaiakun">Login pakai akunmu</string>
    <string name="login">LOGIN</string>
    <string name="forgot">Lupa password?</string>
    <string name="home_menu">Home</string>
    <string name="list_check">ListCheck</string>
    <string name="tambah_plan">add</string>
    <string name="budget">budget</string>
    <string name="profile_user">profile</string>
    <string name="register">REGISTER</string>


    <!--    Heading-->
    <string name="heading_1">SELAMAT DATANG</string>
    <string name="heading_2">SELAMAT DATANG</string>
    <string name="heading_3">SELAMAT DATANG</string>

    <!--    Description-->
    <string name="desc_1">Selamat datang di MOOVE! Siapkan liburan impian Anda dengan mudah dan nikmati perjalanan yang tak terlupakan bersama kami</string>
    <string name="desc_2">Mulailah merencanakan petualangan Anda dengan MOOVE. Atur destinasi, jadwal, dan kegiatan dengan mudah untuk liburan yang sempurna.</string>
    <string name="desc_3">Ayo, jelajahi destinasi populer di MOOVE! Temukan tempat-tempat menarik dan rencanakan liburan impian Anda sekarang.</string>

    <!--    Button-->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="back">Back</string>
    <string name="e_mail">E mail</string>
    <string name="tidakadaakun">Tidak memiliki akun?</string>
    <string name="sudah_memiliki_akun">Sudah memiliki akun?</string>
    <string name="username">username</string>
    <string name="edit_profile">edit profile</string>
    <string name="riwayat_perjalanan">riwayat_perjalanan</string>
    <string name="feedback">feedback</string>
    <string name="rate">rate</string>
    <string name="atur_perjalanan_baru">atur_perjalanan_baru</string>
    <string name="select_date_range">Select Date Range</string>
    <string name="yyyy_mm_dd">yyyy_mm_dd</string>
    <string name="bali">bali</string>
    <string name="jawa_tengah">jawa_tengah</string>
    <string name="lombok">lombok</string>
    <string name="tana_toraja">tana_toraja</string>
    <string name="phone_number">phone_number</string>
    <string name="trip">Trip</string>
    <string name="kota_1">Bali</string>

    <!--    Create Page-->
    <string name="Title_create_page">Buat Rencana Perjalanan</string>
    <string name="judul_trip">Judul Trip</string>
    <string name="welcme">Welcome,\n%1$s!</string>
    <string name="trip_to_bali">Trip to bali</string>
    <string name="review_user">Review User</string>
    <string name="pembuka">Rencanakan liburan impianmu!</string>
    <string name="kotatujuan">Pilih Kota Tujuan</string>
    <string name="nama_kota">Nama Kota</string>
    <string name="pilih_kategori">Pilih Kategori</string>
    <string name="alam">Rating Alam (0-5)</string>
    <string name="belanja">Rating Belanja (0-5)</string>
    <string name="budaya">Rating Budaya (0-5)</string>
    <string name="keluarga">Rating Keluarga (0-5)</string>
    <string name="relaksasi">Rating Relaksasi (0-5)</string>
    <string name="sejarah">Rating Sejarah (0-5)</string>
    <string name="lama_liburan">Berapa hari liburanmu?</string>
    <string name="banyak_hari">Jumlah Hari</string>
    <string name="rekomendasi_tempat_akan_muncul_di_sini">Rekomendasi Tempat akan Muncul di Sini</string>



    <!--    Home-->
    <string name="kota">Kota</string>
    <string name="judul_review">Trip</string>
    <string name="desc_review">desc_review</string>
    <string name="welcome">Welcome,\n%1$s!</string>
    <string name="greetings">Rencanakan liburannmu!</string>
    <string name="destinasi_populer">Destinasi Populer</string>
    <string name="review">Review</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string name="buat">Buat</string>
    <string name="logout">LOGOUT</string>
    <string name="simpan">Simpan</string>

</resources>