<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- TextView for welcome message -->
            <TextView
                android:id="@+id/tv_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/welcome"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <!-- TextView for greetings -->
            <TextView
                android:id="@+id/tv_greetings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/greetings"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <!--    EditText for searchbar-->
            <EditText
                android:id="@+id/et_search"
                android:layout_width="350dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_trip"
                android:drawableStart="@drawable/ic_search"
                android:drawablePadding="8dp"
                android:hint="Cari Destinasi"
                android:inputType="text"
                android:padding="5dp"
                android:textSize="15sp" />

            <!-- ViewFlipper for images -->
            <ViewFlipper
                android:id="@+id/vf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:autoStart="true"
                android:flipInterval="2000"
                android:inAnimation="@android:anim/slide_in_left"
                android:outAnimation="@android:anim/slide_out_right">

                <androidx.cardview.widget.CardView
                    android:layout_width="350dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:layout_marginEnd="10dp"
                    app:cardCornerRadius="10dp">

                    <ImageView
                        android:layout_width="350dp"
                        android:layout_height="120dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/img_indonesia" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="300dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:layout_marginEnd="10dp"
                    app:cardCornerRadius="10dp">

                    <ImageView
                        android:layout_width="300dp"
                        android:layout_height="120dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/img_lombok" />
                </androidx.cardview.widget.CardView>
            </ViewFlipper>

            <TextView
                android:id="@+id/tv_destinasi_populer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_bold"
                android:textSize="18sp"
                android:text="@string/destinasi_populer"
                android:textColor="@color/black" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewDestinasiPopuler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="horizontal" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:background="@color/white"
        app:itemBackground="@android:color/transparent"
        app:itemIconSize="35dp"
        app:itemIconTint="@drawable/item_selector"
        app:itemRippleColor="@null"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />


</androidx.constraintlayout.widget.ConstraintLayout>